# RustyGW

./: .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  AGENTS.md  Cargo.toml  Dockerfile  PERFORMANCE.md  README.md  REMOTE.md  api_keys.example.yaml  docker-compose.swarm.yml  docker-compose.yml  gateway.yaml  stress_test.sh  test_websocket.py  todo
.github/workflows/: release.yml
benches/: gateway_bench.rs  performance_tests.rs
demo/: docker-compose.yml
demo/backend-orders/: Dockerfile  main.py
demo/backend-products/: Dockerfile  main.py
demo/backend-users/: Dockerfile  main.py
demo/frontend/: index.html
docs/: ARCHITECTURE.md  STANDARDS.md
examples/: prometheus.yml  test_server.rs
src/: aggregate.rs  app.rs  config.rs  constants.rs  errors.rs  grpc_proxy.rs  lib.rs  main.rs  proxy.rs  state.rs  ws_proxy.rs
src/features/: health_check.rs  load_balancer.rs  mod.rs
src/features/auth/: auth.rs
src/features/circuit_breaker/: circuit_breaker.rs
src/features/devices/: mod.rs  protocols.rs  registry.rs  serial.rs
src/features/rate_limiter/: state.rs
src/middleware/: mod.rs  transform.rs
src/middleware/access_log/: mod.rs
src/middleware/auth/: auth.rs
src/middleware/cache/: cache.rs
src/middleware/circuit_breaker/: circuit_breaker.rs
src/middleware/rate_limiter/: rate_limit.rs
src/middleware/request_id/: request_id.rs
src/middleware/tracing_ctx/: mod.rs
src/plugins/: examples.rs  plugin.rs  registry.rs
src/utils/: config_path.rs  duration.rs  hot_reload.rs  hot_reload_test.rs  metric_handler.rs  mod.rs
tests/: auth_test.rs  concurrency_tests.rs  config_improvements_test.rs  config_v2_test.rs  failure_injection_tests.rs  gateway_test.yaml  health_check_test.rs  integration_test.rs  load_balancer_test.rs  mock_service.py  negative_tests.rs  performance_tests.rs  rate_limit.rs
