[package]
name = "rust_api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "ws"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_yaml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
http = "1.3"
hyper = "1.6"
bytes = "1.10"
http-body-util = "0.1"
serde_json = "1.0"
once_cell = "1.21"
jsonwebtoken = "9.3"
dotenvy = "0.15"
axum-client-ip = "1.1"
dashmap = "6.1"
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
notify = "8.1"
tempfile = "3.15"
clap = { version = "4.5", features = ["derive"] }
moka = { version = "0.12.12", features = ["future"] }
axum-prometheus = "0.8"
uuid = "1.17"
tower-http = { version = "0.6", features = ["trace", "propagate-header"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

[lib]
name = "rustway"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "examples/server.rs"

[[bin]]
name = "test_server"
path = "examples/test_server.rs"
