[package]
name = "rust_api_gateway"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
axum = {version = "0.8.4", features = ["macros"]}
serde = { version = "1.0.219", features = ["derive","rc"] }
serde_yaml = "0.9.33"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
reqwest = { version = "0.12.22", features = ["json"]}
http = "1.3.1"
hyper = "1.6.0"
bytes = "1.10.1"
http-body-util = "0.1.3"
serde_json = "1.0.142"
once_cell = "1.21.3"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
axum-client-ip = "1.1.3"
dashmap = "6.1.0"
async-trait = "0.1.88"
futures = "0.3.31"
thiserror = "2.0"
notify = "8.1.0"
clap = {version = "4.5.42", features = ["derive"]}
moka = { version = "0.12.10", features = ["future"] }
axum-prometheus = "0.8.0"
uuid = "1.17.0"
tower-http ={ version="0.6.6", features = ["trace", "propagate-header"]}

[lib]
name = "rustway"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[test]]
name = "rate_limit"
path = "tests/rate_limit.rs"

[[test]]
name = "auth_test"
path = "tests/auth_test.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "gateway_bench"
harness = false
